--- a/css/main.css
+++ b/css/main.css
@@ -693,10 +693,6 @@ video {
   width: 100%;
 }
 
-.w-\[100px\] {
-  width: 100px;
-}
-
 .w-\[116px\] {
   width: 116px;
 }
@@ -736,10 +732,6 @@ video {
 
 .max-w-screen-xl {
   max-width: 1280px;
-}
-
-.animate-fadein {
-  animation: fadeIn 0.2s ease-in-out forwards;
 }
 
 .cursor-pointer {
@@ -901,14 +893,18 @@ video {
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
-.bg-slate-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[280306\] {
+  background-color: 280306;
+}
+
+.bg-\[\#280306\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 3 6 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\/imge\/1\.webp\'\)\] {
@@ -1140,11 +1136,6 @@ video {
   transition-duration: 150ms;
 }
 
-.after\:hidden::after {
-  content: var(--tw-content);
-  display: none;
-}
-
 .hover\:bg-\[\#aaa8a8\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(170 168 168 / var(--tw-bg-opacity));
@@ -1177,10 +1168,6 @@ video {
 
 .hover\:opacity-\[\.9\]:hover {
   opacity: .9;
-}
-
-.active\:animate-fadein:active {
-  animation: fadeIn 0.2s ease-in-out forwards;
 }
 
 .active\:border-\[3px\]:active {
