--- a/css/search.css
+++ b/css/search.css
@@ -6,6 +6,7 @@
     height: 30px;
     background-color: rgb(153, 103, 10);
     color: black;
+    border-radius: 50%;
     font-size: 40px;
     text-align: center;
     line-height: 20px;
@@ -14,6 +15,11 @@
     top: 0;
     right: 0;
     cursor: pointer;
+    transition: 300ms;
+}
+.close:hover{
+    background-color: rgb(90, 60, 4);
+
 }
 .input{
     display: block;
